<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DartsApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="triple">T</string>
    <string name="player1" tools:ignore="Typos">Player1</string>
    <string name="player2">Player2</string>
    <string name="D_double">D</string>
    <string name="_00">0 : 0</string>
    <string name="bull">BULL</string>
    <string name="_X01">X01</string>
    <string name="score">score</string>
    <string name="ok">OK</string>
    <string name="_10_n100_n180_n26">10\n100\n180\n26</string>
    <string name="stat">100+\n60+\nAvg\nMax\nMin\nHC</string>
    <string name="player22">Player2</string>
    <string name="cricket">Cricket</string>
    <string name="dartsapp">DartsApp</string>
    <string name="lacika007_gmail_com">lacika007@gmail.com</string>
    <string name="p_nl_na_ny_ne_nr">p\nl\na\ny\ne\nr</string>
    <string name="_X01Single">X01 Single Player</string>
    <string name="new_game">NEW GAME</string>
    <string name="start_game">Start Game!</string>
    <string name="_1">1</string>
    <string name="_0_n0">0\n0</string>
    <string name="SetLeg">S\nL</string>
    <string name="team">Team</string>
    <string name="sp">SP</string>
    <string name="player_team_1">Player/Team 1</string>
    <string name="player_team_2">Player/Team 2</string>
    <string name="add_player">add player</string>
    <string name="speech_recognizer">SpeechRecognizer</string>
    <string name="player">Player</string>
    <string name="single">Single</string>
    <string name="cancel">Cancel</string>
    <string name="player_2_1">Player_2_1</string>
    <string name="player_2_2">Player_2_2</string>
    <string name="player_1_1">Player_1_1</string>
    <string name="player_1_2">Player_1_2</string>
    <string name="voice">voice</string>
    <string name="_26_88">26+88</string>
    <string name="_2_n5_n55_n122_n26_n40">2\n5\n55\n122\n26\n40</string>
    <string name="_100_n60_navg_nmax_nmin_nhc">100+\n60+\nAvg\nMax\nMin\nHC</string>
    <string name="stats">1\n2\n65\n122\n26\n-</string>
    <string name="microphone">microphone</string>
    <string name="_0">0</string>
    <string name="s">S</string>
    <string name="l">L</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="textipadress">textIPAdress</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="_501">501</string>
    <string name="leg">LEG</string>
    <string name="set">SET</string>
    <string name="_1_vs_1">1 vs 1</string>
    <string name="_2_vs_2">2 vs 2</string>
    <string name="_default">Default</string>
    <string name="random">Random</string>
    <string name="first_to">first to</string>
    <string name="_2">2</string>
    <string name="enter_throw_value">Enter throw value</string>
</resources>