<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        android:layout_width="206dp"
        android:layout_height="84dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="62dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreEditText" />

    <FrameLayout
        android:id="@+id/frameLayoutNameStat"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_gravity="center|top"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player1NameText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top|center_horizontal"
            android:text="@string/player2"
            android:textAlignment="gravity"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/player2NameText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top|end"
            android:text="@string/player22"
            android:textAlignment="textEnd"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/player1Score"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:text="@string/_501"
            android:textAlignment="textEnd"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/player2Score"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/_501"
            android:textSize="80sp"
            android:textStyle="bold" />

    </FrameLayout>

    <bruzsa.laszlo.dartsapp.ui.darts501.input.Darts501EditText
        android:id="@+id/scoreEditText"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/score"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        tools:ignore="EditableContentDescCheck,LabelFor,SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPlayer1Shoots"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutNameStat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPlayer2Shoots"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutNameStat" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="209dp"
        android:layout_height="150dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="138dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutNameStat">

        <TextView
            android:id="@+id/textViewStat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/stat"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/player1StatText"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="monospace"
            android:text="@string/_10_n100_n180_n26"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/player2StatText"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/_10_n100_n180_n26"
            android:textAlignment="textStart"
            android:textSize="24sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>