<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="bruzsa.laszlo.dartsapp.model.Team" />

        <variable
            name="viewModel"
            type="bruzsa.laszlo.dartsapp.model.x01.X01ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutTeam1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top|fill_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/frameNameScore"
            app:layout_constraintEnd_toStartOf="@+id/layoutTeam2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/textNamePlayer11"
                style="@style/Widget.Material3.MaterialTimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checkable="false"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/player_1_1"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/textNamePlayer12"
                style="@style/Widget.Material3.MaterialTimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checkable="false"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/player_1_2"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTeam2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|fill_vertical|end"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/frameNameScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutTeam1"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/textNamePlayer21"
                style="@style/Widget.Material3.MaterialTimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:checkable="false"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/player_2_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/textNamePlayer22"
                style="@style/Widget.Material3.MaterialTimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:checkable="false"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/player_2_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameNameScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/textViewStat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTeam1">

            <Button
                android:id="@+id/textScorePlayer2"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|end"
                android:padding="0dp"
                android:text="@{viewModel.getLiveScore(Team.TEAM2).toString(), default=501}"
                android:textAlignment="textEnd"
                android:textSize="60sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/frameSetsLegs"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill_vertical"
                    android:text="@string/SetLeg"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textSetLegPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical|end"
                    android:text="@string/_0_n0"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textSetLegPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|fill_vertical"
                    android:text="@string/_0_n0"
                    android:textSize="24sp" />
            </FrameLayout>

            <Button
                android:id="@+id/textScorePlayer1"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|fill_vertical"
                android:padding="0dp"
                android:text="@{viewModel.getLiveScore(Team.TEAM1).toString(), default=501}"
                android:textSize="60sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/framePlayer1StatThrows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStat"
            app:layout_constraintEnd_toStartOf="@+id/textViewStat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameNameScore">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listThrowsPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:adapter="@{viewModel.getThrowsAdapterTeam(Team.TEAM1)}" />

            <TextView
                android:id="@+id/textStatPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:fontFamily="monospace"
                android:text="@string/_10_n100_n180_n26"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/textViewStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/stat"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/includedInputs"
            app:layout_constraintEnd_toStartOf="@+id/framePlayer2StatThrows"
            app:layout_constraintStart_toEndOf="@+id/framePlayer1StatThrows"
            app:layout_constraintTop_toBottomOf="@+id/frameNameScore" />

        <FrameLayout
            android:id="@+id/framePlayer2StatThrows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewStat"
            app:layout_constraintTop_toBottomOf="@+id/frameNameScore">

            <TextView
                android:id="@+id/textStatPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:fontFamily="monospace"
                android:text="@string/_10_n100_n180_n26"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listThrowsPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:adapter="@{viewModel.getThrowsAdapterTeam(Team.TEAM2)}" />
        </FrameLayout>

        <include
            android:id="@+id/includedInputs"
            layout="@layout/input_views"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>