<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cricket.CricketFragment">

    <FrameLayout
        android:id="@+id/frameTablePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <bruzsa.laszlo.dartsapp.ui.cricket.CricketTable
            android:id="@+id/cricketTable1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|start"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameTablePlayer2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <bruzsa.laszlo.dartsapp.ui.cricket.CricketTable
            android:id="@+id/cricketTable2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameNamesScores"
        android:layout_width="241dp"
        android:layout_height="117dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-20dp"
        app:layout_constraintEnd_toStartOf="@+id/frameTablePlayer2"
        app:layout_constraintStart_toEndOf="@+id/frameTablePlayer1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:autoSizeTextType="none"
            android:text="@string/player2"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/player1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textAlignment="textStart"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/_00"
            android:textSize="50sp" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listThrows"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frameTablePlayer2"
        app:layout_constraintStart_toEndOf="@+id/frameTablePlayer1"
        app:layout_constraintTop_toBottomOf="@+id/frameNamesScores" />

</androidx.constraintlayout.widget.ConstraintLayout>
